tests/ui/precondition-is-not-an-expression.stderr
error: expected an expression as argument

         = help: example syntax: `#[precondition(argument % 2 == 0)]`

 --> $DIR/precondition-is-not-an-expression.rs:4:15
  |
4 | #[precondition(struct)]
  |               ^^^^^^^^
