tests/ui/precondition-is-not-an-expression.rs
use contracts::contracts;

#[contracts]
#[precondition(struct)]
fn f() {}

fn main() {}
